# camunda-fastapi

./: .env  .gitignore  README.md  endpoints.py  main.py  pyproject.toml  workers.py  zeebe_containers.py
camunda_fastapi/: endpoints.py  mail_worker.py  main.py  operate_client.py  settings.py  tasklist_client.py  zeebe_containers.py
camunda_fastapi/c8clients/: operate_client.py  tasklist_client.py
camunda_fastapi/endpoints/: authentication.py  elt_template.py  form.py  mail.py  process.py  task.py
camunda_fastapi/services/: form_service.py  mail_service.py  template_service.py
front/: package-lock.json
front/src/: AdminLayout.tsx  env.tsx
front/src/components/: AdminMailEdit.tsx  AdminNavbar.tsx
front/src/pages/: ElementTemplate.tsx  WorkerList.tsx
front/src/service/: AdminMailService.ts  EltTemplateService.ts  ProcessService.ts  TaskService.ts
front/src/store/: model.tsx
front/src/store/features/adminMails/: slice.ts
workspace/forms/: completeReconciliation  connectorsprocess  createTransferRequest  event-diary  task1  task2  test-connector  transfer41
